html classses added and entegreted.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 server.port=8085
 
+server.error.path=/error
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+
+
+
